# backdoor-attack-traffic-signs

./: .gitignore  LICENSE  README.md  config.py  dataset.py  latent_backdoor.py  main.py  model.py  pipeline.py  prepare_data.py  pyproject.toml  train.py  trigger.py
models/: trigger.pt
models&/: student_infected.onnx
