[project]
name = "backdoor-attack"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "onnx>=1.17.0",
    "onnxscript>=0.7.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
